invisible border for navigation links when not hovered. fixes flickering on hover

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ a:hover {
     display: block;
     color: #FFF;
     text-decoration: none;
+    border-bottom: 2px solid #2e2e2e;
 }
 
 #nav li a:hover {
